4단계 - 로또(2등) (#263)
* style: 한 줄에 점 하나 찍는 규칙을 스트림을 사용하는 경우에 국한하도록 수정한다

* style(test): 한 줄에 점 하나 찍는 규칙을 스트림을 사용하는 경우에 국한하도록 수정한다

* docs: 4단계 요구사항을 추가한다

* style: Prize 객체 내부의 변수명 및 메서드명을 수정한다

* test: view레이어에 의존적인 테스트를 삭제한다

* feat: Prize Enum 객체에 2등을 추가한다

* feat: 로또 객체에 보너스 번호를 추가한다

* feat: 로또 객체에 보너스 번호를 추가한다

* refactor: 인덴트 depth를 1로 제한한다

* docs: README.md에 진행사항을 추가한다

* feat: 2등 추첨을 위한 보너스 번호를 입력받는다

* feat: 당첨 통계에 2등을 추가한다

* style: IDE의 코드 리포맷팅 적용

* docs: 마크다운 오입력 수정